--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
-    <title>Hello World!</title>
+    <title>Music Player</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
