--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,10 @@
   <body>
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
+    <div class="slider_container">
+      <div class="current-time">00:00</div>
+       <input type="range" min="1" max="100" value="0" class="seek_slider" onchange="seekTo()">
+       <div class="total-duration">00:00</div>
+  </div>
   </body>
 </html>
