--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,39 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self';" />
     <title>Music Player</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
     <div class="slider_container">
       <div class="current-time">00:00</div>
-       <input type="range" min="1" max="100" value="0" class="seek_slider" onchange="seekTo()">
-       <div class="total-duration">00:00</div>
-  </div>
+      <input
+        type="range"
+        min="1"
+        max="100"
+        value="0"
+        class="seek_slider"
+        onchange="seekTo()"
+      />
+      <div class="total-duration">00:00</div>
+    </div>
+    <div class="buttons">
+      <div class="random-track" onclick="randomTrack()">
+        <i class="fas fa-random fa-2x" title="random"></i>
+      </div>
+      <div class="prev-track" onclick="prevTrack()">
+        <i class="fa fa-step-backward fa-2x"></i>
+      </div>
+      <div class="playpause-track" onclick="playpauseTrack()">
+        <i class="fa fa-play-circle fa-5x"></i>
+      </div>
+      <div class="next-track" onclick="nextTrack()">
+        <i class="fa fa-step-forward fa-2x"></i>
+      </div>
+      <div class="repeat-track" onclick="repeatTrack()">
+        <i class="fa fa-repeat fa-2x" title="repeat"></i>
+      </div>
+    </div>
   </body>
 </html>
