--- a/src/index.html
+++ b/src/index.html
@@ -5,35 +5,20 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self';" />
     <title>Music Player</title>
     <link rel="stylesheet" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
   </head>
   <body>
     <div class="slider_container">
       <div class="current-time">00:00</div>
-      <input
-        type="range"
-        min="1"
-        max="100"
-        value="0"
-        class="seek_slider"
-        onchange="seekTo()"
-      />
+      <input type="range" min="1" max="100" value="0" class="seek_slider" />
       <div class="total-duration">00:00</div>
     </div>
-    <div class="buttons">
-      <div class="random-track" onclick="randomTrack()">
-        <i class="fas fa-random fa-2x" title="random"></i>
-      </div>
-      <div class="prev-track" onclick="prevTrack()">
-        <i class="fa fa-step-backward fa-2x"></i>
-      </div>
-      <div class="playpause-track" onclick="playpauseTrack()">
-        <i class="fa fa-play-circle fa-5x"></i>
-      </div>
-      <div class="next-track" onclick="nextTrack()">
-        <i class="fa fa-step-forward fa-2x"></i>
-      </div>
-      <div class="repeat-track" onclick="repeatTrack()">
-        <i class="fa fa-repeat fa-2x" title="repeat"></i>
+    <div class="player-buttons">
+      <div class="btnPrevious">
+        <i class="bi bi-chevron-bar-left"></i>
       </div>
     </div>
   </body>
