--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,12 @@
       <div class="btnPrevious">
         <i class="bi bi-chevron-bar-left"></i>
       </div>
+      <div class="btnNext">
+        <i class="bi bi-chevron-bar-right"></i>
+      </div>
+      <div class="btnPlay">
+        <i class="bi bi-play-fill"></i>
+      </div>
     </div>
   </body>
 </html>
