--- a/src/index.html
+++ b/src/index.html
@@ -9,22 +9,33 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body>
+  <body class="bg-dark">
     <div class="slider_container">
       <div class="current-time">00:00</div>
       <input type="range" min="1" max="100" value="0" class="seek_slider" />
       <div class="total-duration">00:00</div>
     </div>
     <div class="player-buttons">
-      <div class="btnPrevious">
-        <i class="bi bi-chevron-bar-left"></i>
+      <div class="btn btnPrevious">
+        <i class="bi bi-chevron-bar-left text-white text-white h1"></i>
       </div>
       <div class="btnNext">
-        <i class="bi bi-chevron-bar-right"></i>
+        <i class="bi bi-chevron-bar-right text-white text-white h1"></i>
       </div>
       <div class="btnPlay">
-        <i class="bi bi-play-fill"></i>
+        <i class="bi bi-play-fill text-white text-white h1"></i>
       </div>
     </div>
   </body>
