--- a/src/index.html
+++ b/src/index.html
@@ -27,17 +27,18 @@
       <input type="range" min="1" max="100" value="0" class="seek_slider" />
       <div class="total-duration">00:00</div>
     </div>
-    <section class="d-flex justify-content-center align-items-end">
-      <div class="player-buttons">
-        <div class="btn btnPrevious">
-          <i class="bi bi-chevron-bar-left text-white text-white h1"></i>
-        </div>
-        <div class="btnNext">
-          <i class="bi bi-chevron-bar-right text-white text-white h1"></i>
-        </div>
-        <div class="btnPlay">
-          <i class="bi bi-play-fill text-white text-white h1"></i>
-        </div>
+
+    <section
+      class="player-buttons d-flex justify-content-center align-items-end"
+    >
+      <div class="btn btnPrevious bg-danger">
+        <i class="bi bi-chevron-bar-left text-white text-white h1"></i>
+      </div>
+      <div class="btn btnPlay bg-danger">
+        <i class="bi bi-play-fill text-white text-white h1"></i>
+      </div>
+      <div class="btn btnNext bg-danger">
+        <i class="bi bi-chevron-bar-right text-white text-white h1"></i>
       </div>
     </section>
   </body>
