--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,13 @@
     <section
       class="player-buttons d-flex justify-content-center align-items-end"
     >
-      <div class="btn btnPrevious bg-danger">
+      <div class="btn btnPrevious bg-danger rounded-circle">
         <i class="bi bi-chevron-bar-left text-white text-white h1"></i>
       </div>
-      <div class="btn btnPlay bg-danger">
+      <div class="btn btnPlay rounded-circle">
         <i class="bi bi-play-fill text-white text-white h1"></i>
       </div>
-      <div class="btn btnNext bg-danger">
+      <div class="btn btnNext bg-danger rounded-circle">
         <i class="bi bi-chevron-bar-right text-white text-white h1"></i>
       </div>
     </section>
