--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body class="bg-dark">
+  <body
+    class="bg-dark d-flex flex-column justify-content-around align-items-center"
+  >
     <div class="slider_container">
       <div class="current-time">00:00</div>
       <input type="range" min="1" max="100" value="0" class="seek_slider" />
@@ -29,7 +31,7 @@
     </div>
 
     <section
-      class="player-buttons d-flex justify-content-center align-items-end"
+      class="player-buttons d-flex justify-content-center align-items-center"
     >
       <div class="btn btnPrevious bg-danger rounded-circle">
         <i class="bi bi-chevron-bar-left text-white text-white h1"></i>
